Fixed desktop nav menu overlap.

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -37,6 +37,9 @@ body {
   body {
     padding-top: 0;
   }
+  .site-content {
+    padding-top: 80px;
+  }
 }
 
 .container {
